# Compression

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
compress/: CMakeLists.txt
compress/huffman/: CMakeLists.txt  byte_array.h  file.cpp  huffman.cpp  huffman.h  main.cpp  token.h
compress/lzw/: CMakeLists.txt  bit_array.cpp  bit_array.h  decoder.cpp  encoder.cpp  lzw.cpp  lzw.h  main.cpp  random_generator.h
include/: byte_array.h  file.h  huffman.h  token.h
scripts/: generate_data.py
source/: file.cpp  huffman.cpp  token.cpp
test/: CMakeLists.txt  test.h  test_bitarray.cpp  test_byte_array.cpp  test_compress.cpp  test_decode.cpp  test_decompress.cpp  test_encode.cpp  test_huffman.cpp  test_token.cpp  timer.h
